--- a/src/styles/StudentDashboard.css
+++ b/src/styles/StudentDashboard.css
@@ -330,11 +330,16 @@
     }
 }
 
-
+.sd-heading{
+    color: #800000;
+    font-weight: bold;
+    text-align: left;
+    margin-left:5%;
+}
 /* Announcements Section */
 /* Announcements Section */
 .sd-announcements {
-    height: 550px; /* Fixed height */
+    height: 500px; /* Fixed height */
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -342,6 +347,7 @@
     overflow-y: auto;
     scrollbar-width: thin;
     -ms-overflow-style: none;
+    padding: 25px;
 }
 
 .sd-announcements::-webkit-scrollbar {
@@ -350,11 +356,12 @@
 
 /* Announcement Card */
 .sd-announcement-card {
-    padding: 15px;
+    padding: 10px;
     border-radius: 15px;
     text-align: left;
     transition: transform 0.2s ease-in-out;
     width: 100%;
+    height: 35%;
 }
   
   /* Announcement Header */
@@ -364,6 +371,7 @@
     align-items: center;
     width: 100%;
     flex-wrap: wrap;
+    margin-top: 0%;
   }
   
   /* Profile Section */
@@ -371,14 +379,24 @@
     display: flex;
     align-items: center;
     gap: 8px;
+    margin-top: 0px;
   }
   
   /* Profile Image */
   .sd-profile-img {
-    width: 30px;
-    height: 30px;
+    width: 8px;
+    height: 8px;
     border-radius: 50%;
     flex-shrink: 0;
+  }
+  .sd-announcement-title{
+    font-size: 20px;
+    font-weight: bold;
+    margin-left: 5%;
+  }
+  .sd-announcement-text{
+    font-size: 14px;
+    margin-left: 5%;
   }
   
   /* Faculty Name */
